--- a/ui/requisitions_report/view/RequisitionsOverview.view.xml
+++ b/ui/requisitions_report/view/RequisitionsOverview.view.xml
@@ -1,6 +1,6 @@
 <mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:fb="sap.ui.comp.filterbar"
 	controllerName="requisitions_report.controller.RequisitionsOverview" xmlns:html="http://www.w3.org/1999/xhtml">
-	<Page title="Title" id="page1">
+	<Page title="Job Requisitions Report" id="page1">
 		<content>
 			<fb:FilterBar reset="onReset" search="onSearch" showRestoreButton="true" showClearButton="true">
 				<fb:filterItems>
@@ -46,31 +46,31 @@
 						</Toolbar>
 					</headerToolbar>
 					<columns>
-						<Column width="12em">
+						<Column width="8%">
 							<Text text="Id"/>
 						</Column>
-						<Column minScreenWidth="Tablet" demandPopin="true">
+						<Column demandPopin="true">
 							<Text text="Name"/>
 						</Column>
-						<Column minScreenWidth="Tablet" demandPopin="true" hAlign="Right">
+						<Column demandPopin="true" hAlign="Right">
 							<Text text="Account"/>
 						</Column>
 						<Column minScreenWidth="Tablet" demandPopin="true" hAlign="Center">
 							<Text text="Subcategory"/>
 						</Column>
-						<Column hAlign="Right">
+						<Column>
 							<Text text="Created By"/>
 						</Column>
-						<Column hAlign="Right">
+						<Column>
 							<Text text="Date / Time Opened"/>
 						</Column>
-						<Column hAlign="Right">
+						<Column width="8%">
 							<Text text="Remaining Days"/>
 						</Column>
-						<Column hAlign="Right">
+						<Column>
 							<Text text="Status"/>
 						</Column>
-						<Column hAlign="Right">
+						<Column>
 							<Text text="Candidates"/>
 						</Column>
 					</columns>
@@ -78,14 +78,16 @@
 						<ColumnListItem type="Navigation" press="onRequisitionPress">
 							<cells>
 								<Text text="{ui>ReqId}"/>
-								<Text text="{ui>ReqName}"/>
-								<Text text="{ui>ProjectName}"/>
+								<Text text="{ui>Title}"/>
+								<Text text="{ui>ProjectId}"/>
 								<Text text="{ui>SubcategoryName}"/>
 								<Text text="{ui>CreatedBy}"/>
-								<Text text="{ui>CreatedAt}"/>
+<!-- 								<Text text="{ui>CreatedAt}"/> -->
+								<!-- <DatePicker value="{ui>CreatedAt}"	displayFormat="short" editable="false"/> -->
+ 								<Text text="{model: 'ui', path: 'CreatedAt', type:'sap.ui.model.type.DateTime', formatOptions: {style:'medium'}}"/> 
 								<Text text="{ui>RemainingDays}"/>
-								<ObjectStatus text="{ui>StatusCode}" state="Success"/>
-								<core:Icon src="sap-icon://employee" color="#031E48"/>
+								<ObjectStatus text="{ui>StatusCodeId}" state="Success"/>
+								<core:Icon visible="{showCandidatesIcon}" src="sap-icon://employee" color="#031E48"/>
 							</cells>
 						</ColumnListItem>
 					</items>
