--- a/ui/requisitions_report/view/Requisition.view.xml
+++ b/ui/requisitions_report/view/Requisition.view.xml
@@ -30,7 +30,7 @@
 						<uxap:subSections>
 							<uxap:ObjectPageSubSection title="">
 								<uxap:blocks>
-									<common:InfoForm/>
+									<common:InfoForm modelName="ui"/>
 								</uxap:blocks>
 							</uxap:ObjectPageSubSection>
 						</uxap:subSections>
@@ -39,7 +39,7 @@
 						<uxap:subSections>
 							<uxap:ObjectPageSubSection title="{i18n>skills}">
 								<uxap:blocks>
-									<common:SkillsTable/>
+									<common:SkillsTable modelName="ui"/>
 								</uxap:blocks>
 							</uxap:ObjectPageSubSection>
 						</uxap:subSections>
