--- a/ui/manage_vacancy/css/style.css
+++ b/ui/manage_vacancy/css/style.css
@@ -1,1 +1,14 @@
 /* Enter your custom styles here */
+.languageCSS {
+	padding-top: 1rem !important;
+}
+
+.popoverImagePadding{
+	padding-left: 1rem;
+	padding-right: 2rem;
+	padding-bottom: 1rem;
+}
+
+.popoverTextPadding{
+	padding-right:1rem;
+}
