--- a/ui/manage_vacancy/view/DetailVacancy.view.xml
+++ b/ui/manage_vacancy/view/DetailVacancy.view.xml
@@ -2,7 +2,8 @@
 		  xmlns:semantic="sap.m.semantic" xmlns="sap.uxap" xmlns:layout="sap.ui.layout" xmlns:info="manage_vacancy.SharedBlocks.info"
 		  xmlns:skills="manage_vacancy.SharedBlocks.skills"
 		  controllerName="manage_vacancy.controller.DetailVacancy" id="detail" displayBlock="false"
-		  xmlns:candidates="manage_vacancy.SharedBlocks.candidates">
+		  xmlns:candidates="manage_vacancy.SharedBlocks.candidates"
+		  xmlns:comments="manage_vacancy.SharedBlocks.comments">
 	<semantic:DetailPage id="detailvac" title="{i18n>title}" enableScrolling="false">
 		<semantic:content >	
 			<ObjectPageLayout id="detObj" showTitleInHeaderContent="false">
@@ -32,7 +33,11 @@
 					    </m:FlexBox>
 					    
 					    <m:FlexBox alignContent="End" justifyContent="End" class="languageCSS">
-					    	<m:Select >
+					    	<m:Select forceSelection="false"
+					    			  selectedKey="{ui>Language}"
+					    			  items="{ui>/AvailableLanguages}"
+					    			  enabled="false">
+								<core:Item key="{ui>SlsLang}" text="{path: 'ui>SlsLang', formatter: 'manage_vacancy.util.formatter.getLanguageText'}" />
 							</m:Select>	
 						</m:FlexBox>
 					</layout:VerticalLayout> 
@@ -61,6 +66,15 @@
 							<ObjectPageSubSection title="">
 								<blocks>
 									<candidates:Candidates id="cand"/>
+								</blocks>
+							</ObjectPageSubSection>
+						</subSections>
+					</ObjectPageSection>
+					<ObjectPageSection id="detComments" title="{i18n>comments}" titleUppercase="false">
+						<subSections>
+							<ObjectPageSubSection title="">
+								<blocks>
+									<comments:CommentsBlock id="comm"/>
 								</blocks>
 							</ObjectPageSubSection>
 						</subSections>
