--- a/ui/requisitions_report/view/CandidatesOverview.view.xml
+++ b/ui/requisitions_report/view/CandidatesOverview.view.xml
@@ -2,7 +2,7 @@
 	xmlns="sap.m" xmlns:fb="sap.ui.comp.filterbar"
 	controllerName="requisitions_report.controller.RequisitionsOverview"
 	xmlns:html="http://www.w3.org/1999/xhtml">
-	<Page title="Job Requisitions Report" id="page1">
+	<Page title="title" id="page1">
 		<content>
 			<fb:FilterBar reset="onReset" search="onSearch"
 				showRestoreButton="true" showClearButton="true" useToolbar="true"
@@ -38,39 +38,33 @@
 
 			</fb:FilterBar>
 			<VBox class="sapUiSmallMargin">
-				<Table id="idProductsTable" inset="false" items="{ui>/requisitions}">
+				<Table id="req_report_candidatesTable" inset="false" items="{ui>candidates}">
 					<headerToolbar>
 						<Toolbar>
-							<Title text="Job Requisitions" level="H2" />
+							<Title text="{i18n>cand.overview.tab.header}" level="H2" />
 						</Toolbar>
 					</headerToolbar>
 					<columns>
 						<Column width="8%">
-							<Text text="Id" />
+							<Text text="{i18n>cand.overview.tab.fname}" />
 						</Column>
 						<Column demandPopin="true">
-							<Text text="Name" />
+							<Text text="{i18n>cand.overview.tab.lname}" />
 						</Column>
 						<Column demandPopin="true" hAlign="Right">
-							<Text text="Account" />
+							<Text text="{i18n>cand.overview.tab.region}" />
 						</Column>
 						<Column minScreenWidth="Tablet" demandPopin="true" hAlign="Center">
-							<Text text="Subcategory" />
+							<Text text="{i18n>cand.overview.tab.site}" />
 						</Column>
 						<Column>
-							<Text text="Created By" />
+							<Text text="{i18n>cand.overview.tab.suitability}" />
 						</Column>
 						<Column>
-							<Text text="Date / Time Opened" />
+							<Text text="{i18n>cand.overview.tab.salary}" />
 						</Column>
 						<Column width="8%">
-							<Text text="Remaining Days" />
-						</Column>
-						<Column>
-							<Text text="Status" />
-						</Column>
-						<Column>
-							<Text text="Candidates" />
+							<Text text="{i18n>cand.overview.tab.reqs}" />
 						</Column>
 					</columns>
 					<items>
@@ -81,17 +75,22 @@
 								<Text text="{ui>ProjectId}" />
 								<Text text="{ui>SubcategoryName}" />
 								<Text text="{ui>CreatedBy}" />
-								<!-- <Text text="{ui>CreatedAt}"/> -->
-								<!-- <DatePicker value="{ui>CreatedAt}" displayFormat="short" editable="false"/> -->
-								<Text
-									text="{model: 'ui', path: 'CreatedAt', type:'sap.ui.model.type.DateTime', formatOptions: {style:'medium'}}" />
-								<Text text="{ui>RemainingDays}" />
-								<ObjectStatus text="{ui>StatusCodeId}" state="Success" />
+								<ProgressIndicator percentValue="{ui>Distance}" showValue="true" 
+										state="Success"
+									    height="1.5rem" width="80%" displayValue="{ui>Distance} %"/>
+								<ObjectNumber
+												class="sapUiSmallMarginBottom"
+												binding="{/ProductCollection/0}"
+												number="{
+														parts:[{path:'Price'},{path:'CurrencyCode'}],
+														type: 'sap.ui.model.type.Currency',
+														formatOptions: {showMeasure: false}
+													}"
+												unit="{CurrencyCode}" />
 								<HBox>
-									<core:Icon visible="{= ${ui>Candidates}.length > 0}" src="sap-icon://employee" press="onShowCandPopover"/>
+									<core:Icon visible="{= ${ui>Requisitions}.length > 0}" src="sap-icon://employee" press="onShowCandPopover"/>
 									<Text text="({= ${ui>Candidates}.length})" class="sapUiTinyMarginBeginEnd"/>
-								</HBox>
-								
+								</HBox>								
 							</cells>
 						</ColumnListItem>
 					</items>
