--- a/ui/manage_vacancy/css/style.css
+++ b/ui/manage_vacancy/css/style.css
@@ -3,6 +3,10 @@
 	padding-top: 1rem !important;
 }
 
+.statusCSS {
+	padding-top: 0.5rem !important;
+}
+
 .popoverImagePadding{
 	padding-left: 1rem;
 	padding-right: 2rem;
