Form Editable parameter added

--- a/ui/requisitions_report/view/Requisition.view.xml
+++ b/ui/requisitions_report/view/Requisition.view.xml
@@ -39,7 +39,7 @@
 						<uxap:subSections>
 							<uxap:ObjectPageSubSection title="">
 								<uxap:blocks>
-									<common:InfoForm/>
+									<common:InfoForm formEditable="false"/>
 								</uxap:blocks>
 							</uxap:ObjectPageSubSection>
 						</uxap:subSections>
