Candidates form update, some common updates

--- a/ui/requisitions_report/view/CandidatesOverview.view.xml
+++ b/ui/requisitions_report/view/CandidatesOverview.view.xml
@@ -71,7 +71,7 @@
 						</Column>
 					</columns>
 					<items>
-						<ColumnListItem type="Navigation" press="onRequisitionPress">
+						<ColumnListItem type="Navigation" press="onCandidatePress">
 							<cells>
 								<CheckBox selected="{ui>selected}"/>
 								<Text text="{ui>FirstName}" />
