--- a/ui/candidates_search/view/CandidatesOverview.view.xml
+++ b/ui/candidates_search/view/CandidatesOverview.view.xml
@@ -1,101 +1,72 @@
 <mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:fb="sap.ui.comp.filterbar"
 	controllerName="candidates_search.controller.CandidatesOverview" xmlns:html="http://www.w3.org/1999/xhtml">
-	<Page title="Title" id="page1">
+	<Page title="{i18n>cadidates_overview}" >
 		<content>
-			<fb:FilterBar reset="onReset" search="onSearch" showRestoreButton="true" showClearButton="true">
+			<fb:FilterBar reset="onReset" search="onSearch"
+				showRestoreButton="true" showClearButton="true" useToolbar="true"
+				id="cand_fb">
+				<SearchField search="onSearch"/>
 				<fb:filterItems>
-					<fb:FilterItem name="A" label="labelA">
+					<fb:FilterItem name="location" label="{i18n>cand.table.location}">
 						<fb:control>
-							<Input type="Text"/>
+							<Input type="Text" />
 						</fb:control>
 					</fb:FilterItem>
-					<fb:FilterItem name="B" label="labelB" labelTooltip="Tooltip Example" mandatory="true">
+					<fb:FilterItem name="website" label="{i18n>cand.table.website}">
 						<fb:control>
-							<Input type="Text"/>
+							<Input type="Text" />
 						</fb:control>
 					</fb:FilterItem>
 				</fb:filterItems>
-				<fb:filterGroupItems>
-					<fb:FilterGroupItem groupName="G1" groupTitle="Group1" name="A" label="labelA" labelTooltip="Tooltip GroupItem Example">
-						<fb:control>
-							<Input type="Text"/>
-						</fb:control>
-					</fb:FilterGroupItem>
-					<fb:FilterGroupItem groupName="G1" groupTitle="Group1" name="B" label="labelB">
-						<fb:control>
-							<Input type="Text"/>
-						</fb:control>
-					</fb:FilterGroupItem>
-					<fb:FilterGroupItem groupName="G2" groupTitle="Group2" name="A2" label="labelA2" labelTooltip="Tooltip GroupItem Example">
-						<fb:control>
-							<Input type="Text"/>
-						</fb:control>
-					</fb:FilterGroupItem>
-					<fb:FilterGroupItem groupName="G2" groupTitle="Group2" name="B2" label="labelB2">
-						<fb:control>
-							<Input type="Text"/>
-						</fb:control>
-					</fb:FilterGroupItem>
-				</fb:filterGroupItems>
+
 			</fb:FilterBar>
 			<VBox class="sapUiSmallMargin">
-				<Table id="idProductsTable" inset="false" items="{ui>/requisitions}">
-					<headerToolbar>
-						<Toolbar>
-							<Title text="Job Requisitions" level="H2"/>
-						</Toolbar>
-					</headerToolbar>
-					<columns>
-						<Column width="12em">
-							<Text text="Id"/>
-						</Column>
-						<Column minScreenWidth="Tablet" demandPopin="true">
-							<Text text="Name"/>
-						</Column>
-						<Column minScreenWidth="Tablet" demandPopin="true" hAlign="Right">
-							<Text text="Account"/>
-						</Column>
-						<Column minScreenWidth="Tablet" demandPopin="true" hAlign="Center">
-							<Text text="Subcategory"/>
-						</Column>
-						<Column hAlign="Right">
-							<Text text="Created By"/>
-						</Column>
-						<Column hAlign="Right">
-							<Text text="Date / Time Opened"/>
-						</Column>
-						<Column hAlign="Right">
-							<Text text="Remaining Days"/>
-						</Column>
-						<Column hAlign="Right">
-							<Text text="Status"/>
-						</Column>
-						<Column hAlign="Right">
-							<Text text="Candidates"/>
-						</Column>
-					</columns>
-					<items>
-						<ColumnListItem type="Navigation" press="onRequisitionPress">
-							<cells>
-								<Text text="{ui>ReqId}"/>
-								<Text text="{ui>ReqName}"/>
-								<Text text="{ui>ProjectName}"/>
-								<Text text="{ui>SubcategoryName}"/>
-								<Text text="{ui>CreatedBy}"/>
-								<Text text="{ui>CreatedAt}"/>
-								<Text text="{ui>RemainingDays}"/>
-								<ObjectStatus text="{ui>StatusCode}" state="Success"/>
-								<core:Icon src="sap-icon://employee" color="#031E48"/>
-							</cells>
-						</ColumnListItem>
-					</items>
-				</Table>
+				<Table id="idCandidates" items="{ui>/candidates}"  headerText="{i18n>candidates} ({ui>/candidates/length})">
+						<columns>
+							<Column hAlign="Left">
+								<Text text="{i18n>cand.table.fname}"/>
+							</Column>
+							<Column hAlign="Left">
+								<Text text="{i18n>cand.table.lname}"/>
+							</Column>
+							<Column hAlign="Left">
+								<Text text="{i18n>cand.table.location}"/>
+							</Column>
+							<Column hAlign="Left">
+								<Text text="{i18n>cand.table.website}"/>
+							</Column>
+							<Column hAlign="Left">
+								<Text text="{i18n>cand.table.rating}"/>
+							</Column>
+							<Column hAlign="Left">
+								<Text text="{i18n>cand.table.salary}"/>
+							</Column>
+							<Column hAlign="Left">
+								<Text text="{i18n>cand.table.job_req}"/>
+							</Column>
+						</columns>
+						<items>
+							<ColumnListItem type="Navigation" vAlign="Middle" press="handleCandidatePress">
+								<cells>
+									
+									<Text text="{ui>FirstName}" />
+									<Text text="{ui>LastName}"/>
+									<Text text="{ui>Location}"/>
+									<core:Icon src="sap-icon://globe" color="#6495ED" size="2rem"/>
+									<ProgressIndicator  showValue="true" 
+														 displayValue="100%"/>
+									<Text text="{ui>salary/Salary}"/>
+									<core:Icon  src="sap-icon://employee" />
+								</cells>
+							</ColumnListItem>
+						</items>
+	</Table>
 			</VBox>
 		</content>
 		<footer>
 			<Toolbar>
 				<ToolbarSpacer/>
-				<Button text="Show Candidates"/>
+				<Button text="Assign to Requisition"/>
 			</Toolbar>
 		</footer>
 	</Page>
