--- a/ui/requisitions_report/view/Candidate.view.xml
+++ b/ui/requisitions_report/view/Candidate.view.xml
@@ -2,7 +2,7 @@
 	xmlns:uxap="sap.uxap" xmlns="sap.m" controllerName="requisitions_report.controller.Candidate"
 	xmlns:layout="sap.ui.layout" xmlns:common="iacube.ui.common" xmlns:mc="sap.suite.ui.microchart"
 	xmlns:html="http://www.w3.org/1999/xhtml">
-	<Page title="{i18n>cand.page}">
+	<Page title="{i18n>cand.page.title}">
 		<content>
 			<uxap:ObjectPageLayout id="candidatePage"
 				showTitleInHeaderContent="false">
@@ -10,12 +10,10 @@
 					<uxap:ObjectPageHeader id="headerForTest"
 						headerDesign="Light" objectTitle="{ui>FirstName} {ui>LastName}"
 						showTitleSelector="true" titleSelectorPress="onProfileSelectorShow"
-						objectSubtitle="Long subtitle that wraps and goes over more lines"
-						objectImageShape="Circle"
-						objectImageURI="https://sapui5.hana.ondemand.com/test-resources/sap/uxap/images/imageID_275314.png">
+						objectSubtitle="{ui>selectedProfile}" objectImageShape="Circle"
+						objectImageURI="{ui>Photo}">
 						<uxap:breadCrumbsLinks>
-							<Link text="Page 1 a very long link" press="handleLink1Press" />
-							<Link text="Page 2 long link" press="handleLink2Press" />
+							<Link text="{i18n>cand.page.breadcrumps} {ui>/selectedRequisitionTitle}" press="handleLink1Press" />
 						</uxap:breadCrumbsLinks>
 					</uxap:ObjectPageHeader>
 				</uxap:headerTitle>
@@ -32,11 +30,22 @@
 					<uxap:ObjectPageSection id="candInfo"
 						title="{i18n>cand.info.title}" titleUppercase="false">
 						<uxap:subSections>
-							<uxap:ObjectPageSubSection title="titleSub">
+							<uxap:ObjectPageSubSection title="{i18n>cand.page.header.info}">
 								<uxap:blocks>
 									<common:candInfoForm id="cand_page_info_form"
 										FirstName="{ui>FirstName}" LastName="{ui>LastName}" ProfArea="{ui>ProfArea}"
 										Location="{ui>Location}" Link="{ui>profiles/0/Link}" Summary="{ui>profiles/0/Summary}" />
+								</uxap:blocks>
+							</uxap:ObjectPageSubSection>
+						</uxap:subSections>
+					</uxap:ObjectPageSection>
+					<uxap:ObjectPageSection id="candSkills"
+						title="{i18n>cand.skills.title}" titleUppercase="false">
+						<uxap:subSections>
+							<uxap:ObjectPageSubSection title="{i18n>cand.page.header.skills}">
+								<uxap:blocks>
+									<common:candSkillsForm id="cand_page_skills_form"
+										skills="{ui>profiles/0/skills}" />
 								</uxap:blocks>
 							</uxap:ObjectPageSubSection>
 						</uxap:subSections>
