--- a/ui/requisitions_report/view/RequisitionsOverview.view.xml
+++ b/ui/requisitions_report/view/RequisitionsOverview.view.xml
@@ -2,7 +2,7 @@
 	xmlns="sap.m" xmlns:fb="sap.ui.comp.filterbar"
 	controllerName="requisitions_report.controller.RequisitionsOverview"
 	xmlns:html="http://www.w3.org/1999/xhtml">
-	<Page title="Job Requisitions Report" id="page1">
+	<Page title="{i18n>req.page.title}" id="req_overview_page">
 		<content>
 			<fb:FilterBar reset="onReset" search="onSearch"
 				showRestoreButton="true" showClearButton="true" useToolbar="true"
@@ -48,7 +48,7 @@
 						<Column width="5%">
 							<Text text="" />
 						</Column>
-						<Column>
+						<Column width="5%">
 							<Text text="{i18n>req.table.id}" />
 						</Column>
 						<Column>
