--- a/ui/requisitions_report/view/Candidate.view.xml
+++ b/ui/requisitions_report/view/Candidate.view.xml
@@ -2,7 +2,7 @@
 	xmlns:uxap="sap.uxap" xmlns="sap.m" controllerName="requisitions_report.controller.Candidate"
 	xmlns:layout="sap.ui.layout" xmlns:common="iacube.ui.common" xmlns:mc="sap.suite.ui.microchart"
 	xmlns:html="http://www.w3.org/1999/xhtml">
-	<Page title="{i18n>cand.page.title}">
+	<Page showNavButton="true" navButtonPress="onNavBack" title="{i18n>cand.page.title}">
 		<content>
 			<uxap:ObjectPageLayout id="candidatePage"
 				showTitleInHeaderContent="false">
@@ -13,19 +13,12 @@
 						objectSubtitle="{ui>selectedProfile}" objectImageShape="Circle"
 						objectImageURI="{ui>Photo}">
 						<uxap:breadCrumbsLinks>
-							<Link text="{i18n>cand.page.breadcrumps} {ui>/selectedRequisitionTitle}" press="handleLink1Press" />
+							<Link
+								text="{i18n>cand.page.breadcrumps} {ui>/selectedRequisitionTitle}"
+								press="handleLink1Press" />
 						</uxap:breadCrumbsLinks>
 					</uxap:ObjectPageHeader>
 				</uxap:headerTitle>
-				<!-- <uxap:headerContent> <layout:VerticalLayout width="5%"></layout:VerticalLayout> 
-					<layout:VerticalLayout> <ObjectStatus title="{i18n>req.detail.location}" 
-					text="{ui>Location}" /> <ObjectStatus title="{i18n>req.detail.project}" text="{ui>ProjectId}" 
-					/> </layout:VerticalLayout> <layout:VerticalLayout width="40%"></layout:VerticalLayout> 
-					<layout:VerticalLayout> <ObjectStatus title="{i18n>req.detail.created}" text="{ui>CreatedAt}" 
-					/> <FlexBox alignContent="End" justifyContent="End"> <ObjectStatus text="{ui>StatusCodeId}" 
-					state="Success" /> </FlexBox> <layout:VerticalLayout></layout:VerticalLayout> 
-					<FlexBox alignContent="End" justifyContent="End"> <Select></Select> </FlexBox> 
-					</layout:VerticalLayout> </uxap:headerContent> -->
 				<uxap:sections>
 					<uxap:ObjectPageSection id="candInfo"
 						title="{i18n>cand.info.title}" titleUppercase="false">
@@ -53,5 +46,12 @@
 				</uxap:sections>
 			</uxap:ObjectPageLayout>
 		</content>
+		<footer>
+			<Toolbar>
+				<ToolbarSpacer />
+				<Button text="{i18n>cand.overview.footer.button}" type="Emphasized"
+					press="onCandidateAssign" />
+			</Toolbar>
+		</footer>
 	</Page>
 </mvc:View>
