--- a/ui/requisitions_report/view/CandidatesOverview.view.xml
+++ b/ui/requisitions_report/view/CandidatesOverview.view.xml
@@ -35,7 +35,6 @@
 						</fb:control>
 					</fb:FilterItem>
 				</fb:filterItems>
-
 			</fb:FilterBar>
 			<VBox class="sapUiSmallMargin">
 				<Table id="req_report_candidatesTable" inset="false" items="{ui>candidates}">
@@ -63,9 +62,9 @@
 						<Column>
 							<Text text="{i18n>cand.overview.tab.suitability}" />
 						</Column>
-						<Column>
+<!-- 						<Column>
 							<Text text="{i18n>cand.overview.tab.salary}" />
-						</Column>
+						</Column> -->
 						<Column width="8%">
 							<Text text="{i18n>cand.overview.tab.reqs}" />
 						</Column>
@@ -79,20 +78,18 @@
 								<Text text="{ui>Location}" />
 								<core:Icon src="sap-icon://globe" color="#6495ED" press="onProfilesPopover"/>
 								<ProgressIndicator percentValue="{ui>Distance}" showValue="true" 
-										state="Success"
-									    width="80%" displayValue="{ui>Distance} %"/>
-								<ObjectNumber
-												class="sapUiSmallMarginBottom"
-												binding="{/ProductCollection/0}"
+									state="{model:'ui', path:'Distance', formatter:'.formatter.formatDistanceState'}" height="1.5rem" width="80%" displayValue="{ui>Distance} %"/>
+<!--								<ObjectNumber
+ 												class="sapUiSmallMarginBottom"
 												number="{
-														parts:[{path:'Price'},{path:'CurrencyCode'}],
-														type: 'sap.ui.model.type.Currency',
-														formatOptions: {showMeasure: false}
+														model: 'ui',
+														path: 'salary',
+														formatter: '.formatter.formatSalary'
 													}"
-												unit="{CurrencyCode}" />
+												unit="{ui>CurrencyCode}" /> -->
 								<HBox>
-									<core:Icon visible="{= ${ui>Requisitions}.length > 0}" src="sap-icon://document" press="onShowRequisPopover"/>
-									<Text text="({= ${ui>Candidates}.length})" class="sapUiTinyMarginBeginEnd"/>
+									<core:Icon visible="{= ${ui>requisitions}.length > 0}" src="sap-icon://document" press="onShowRequisPopover"/>
+									<Text text="({= ${ui>requisitions}.length})" class="sapUiTinyMarginBeginEnd"/>
 								</HBox>								
 							</cells>
 						</ColumnListItem>
