--- a/ui/requisitions_report/view/RequisitionsOverview.view.xml
+++ b/ui/requisitions_report/view/RequisitionsOverview.view.xml
@@ -41,7 +41,8 @@
 				<Table id="idProductsTable" inset="false" items="{ui>/requisitions}">
 					<headerToolbar>
 						<Toolbar>
-							<Title text="{i18n>req.table.title} ({= ${ui>/requisitions}.length})" level="H2" />
+							<Title text="{i18n>req.table.title} ({= ${ui>/requisitions}.length})"
+								level="H2" />
 						</Toolbar>
 					</headerToolbar>
 					<columns>
@@ -79,23 +80,24 @@
 					<items>
 						<ColumnListItem type="Navigation" press="onRequisitionPress">
 							<cells>
-								<RadioButton groupName="A" select="onRequisitionSelect"/>
+								<RadioButton groupName="A" select="onRequisitionSelect" />
 								<Text text="{ui>ReqId}" />
 								<Text text="{ui>Title}" />
 								<Text text="{ui>ProjectId}" />
 								<Text text="{ui>SubcategoryName}" />
 								<Text text="{ui>CreatedBy}" />
-								<!-- <Text text="{ui>CreatedAt}"/> -->
-								<!-- <DatePicker value="{ui>CreatedAt}" displayFormat="short" editable="false"/> -->
 								<Text
 									text="{model: 'ui', path: 'CreatedAt', type:'sap.ui.model.type.DateTime', formatOptions: {pattern:'dd/MM/yyyy hh:mm'}}" />
 								<Text text="{ui>DaysRemain}" />
-								<ObjectStatus text="{model: 'ui', path: 'StatusCodeId', formatter: '.formatter.formatReqStatus'}" state="Success" />
+								<ObjectStatus
+									text="{model: 'ui', path: 'StatusCodeId', formatter: '.formatter.formatReqStatus'}"
+									state="Success" />
 								<HBox>
-									<core:Icon visible="{= ${ui>candidates}.length > 0}" src="sap-icon://employee" press="onShowCandPopover"/>
-									<Text text="({= ${ui>candidates}.length})" class="sapUiTinyMarginBeginEnd"/>
+									<core:Icon visible="{= ${ui>candidates}.length > 0}"
+										src="sap-icon://employee" press="onShowCandPopover" />
+									<Text text="({= ${ui>candidates}.length})" class="sapUiTinyMarginBeginEnd" />
 								</HBox>
-								
+
 							</cells>
 						</ColumnListItem>
 					</items>
@@ -105,7 +107,8 @@
 		<footer>
 			<Toolbar>
 				<ToolbarSpacer />
-				<Button text="{i18n>req.ovw.footer.button}" enabled="{= !!${ui>/selectedRequisition}}" press="onShowCandidates" />
+				<Button text="{i18n>req.ovw.footer.button}" enabled="{= !!${ui>/selectedRequisition}}"
+					press="onShowCandidates" />
 			</Toolbar>
 		</footer>
 	</Page>
