--- a/ui/candidates_search/view/CandidatesOverview.view.xml
+++ b/ui/candidates_search/view/CandidatesOverview.view.xml
@@ -15,13 +15,21 @@
 						<fb:control>
 							<Input type="Text" />
 						</fb:control>
+						<fb:control>
+								<Input type="Text" />
+							<ComboBox
+								items="{ui>/profileTypes}">
+							<core:Item key="{ui>Id}" text="{ui>value}" />
+						</ComboBox> 
+						</fb:control>
 					</fb:FilterItem>
 				</fb:filterItems>
 
 			</fb:FilterBar>
 			<VBox class="sapUiSmallMargin">
-				<Table id="idCandidates" items="{ui>/candidates}"  headerText="{i18n>candidates} ({ui>/candidates/length})" visible="false">
+				<Table id="idCandidates" items="{ui>/candidates}" selectionMode="MultiToggle" headerText="{i18n>candidates} ({ui>/candidates/length})" visible="false"  >
 						<columns>
+							<Column width="30px" hAlign="Right"></Column>
 							<Column hAlign="Left">
 								<Text text="{i18n>cand.table.fname}"/>
 							</Column>
@@ -44,7 +52,7 @@
 						<items>
 							<ColumnListItem type="Navigation" vAlign="Middle" press="handleCandidatePress">
 								<cells>
-									
+									<CheckBox/>
 									<Text text="{ui>FirstName}" />
 									<Text text="{ui>LastName}"/>
 									<Text text="{ui>Location}"/>
@@ -62,7 +70,7 @@
 		<footer>
 			<Toolbar>
 				<ToolbarSpacer/>
-				<Button text="Assign to Requisition"/>
+				<Button text="{i18n>cand.button.assign}"/>
 			</Toolbar>
 		</footer>
 	</Page>
